# INB306-MLKEM-HQC-on-ESP32

./: .gitignore  CMakeLists.txt  README.md  flash_no_stub.sh  sdkconfig.defaults
components/hqc_port/: CMakeLists.txt  randombytes_esp.c
components/mlkem_native_port/: CMakeLists.txt  randombytes_esp.c
components/mlkem_native_port/include/: mlkem_randombytes.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  bench_common.c  bench_common.h  bench_hqc.c  bench_hqc.h  bench_hybrid_hqc.c  bench_hybrid_hqc.h  bench_hybrid_mlkem.c  bench_hybrid_mlkem.h  bench_mlkem.c  bench_mlkem.h  bench_parallel_hqc.c  bench_parallel_hqc.h  bench_parallel_mlkem.c  bench_parallel_mlkem.h
